hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__itobool@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i1 @_hl.main.1(i8 %0) {
alloca_block:
  %"0" = alloca i1, align 1
  %"2_0" = alloca i8, align 1
  %"4_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8 %0, i8* %"2_0", align 1
  %"2_01" = load i8, i8* %"2_0", align 1
  %eq1 = icmp eq i8 %"2_01", 1
  %1 = select i1 %eq1, i1 true, i1 false
  store i1 %1, i1* %"4_0", align 1
  %"4_02" = load i1, i1* %"4_0", align 1
  store i1 %"4_02", i1* %"0", align 1
  %"03" = load i1, i1* %"0", align 1
  ret i1 %"03"
}
