hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__trunc_s@llvm21.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [58 x i8] c"Float value too big to convert to int of given width (32)\00", align 1

define internal { i1, { i32, ptr }, i32 } @_hl.main.1(double %0) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %within_upper_bound = fcmp olt double %0, 0x41DFFFFFFFC00000, !dbg !15
  %within_lower_bound = fcmp ole double 0xC1E0000000000000, %0, !dbg !15
  %success = and i1 %within_upper_bound, %within_lower_bound, !dbg !15
  %trunc_result = fptosi double %0 to i32, !dbg !15
  %1 = insertvalue { i1, { i32, ptr }, i32 } { i1 true, { i32, ptr } poison, i32 poison }, i32 %trunc_result, 2, !dbg !15
  %2 = select i1 %success, { i1, { i32, ptr }, i32 } %1, { i1, { i32, ptr }, i32 } { i1 false, { i32, ptr } { i32 2, ptr @0 }, i32 poison }, !dbg !15
  ret { i1, { i32, ptr }, i32 } %2
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !14}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, { i32, ptr }, i32 }", file: !2, size: 16, align: 8, elements: !8)
!8 = !{!9, !10, !12}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, ptr }", file: !2, size: 12, align: 8, elements: !11)
!11 = !{!12, !13}
!12 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!13 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!14 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!15 = !DILocation(line: 5299, column: 65, scope: !3)
