hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__trunc_s@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [58 x i8] c"Float value too big to convert to int of given width (32)\00", align 1

define internal { i1, { i32, ptr }, i32 } @_hl.main.1(double %0) !dbg !3 {
alloca_block:
  %"0" = alloca { i1, { i32, ptr }, i32 }, align 8
  %"2_0" = alloca double, align 8
  %"4_0" = alloca { i1, { i32, ptr }, i32 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, ptr %"2_0", align 8
  %"2_01" = load double, ptr %"2_0", align 8
  %within_upper_bound = fcmp olt double %"2_01", 0x41DFFFFFFFC00000, !dbg !15
  %within_lower_bound = fcmp ole double 0xC1E0000000000000, %"2_01", !dbg !15
  %success = and i1 %within_upper_bound, %within_lower_bound, !dbg !15
  %trunc_result = fptosi double %"2_01" to i32, !dbg !15
  %1 = insertvalue { i1, { i32, ptr }, i32 } { i1 true, { i32, ptr } poison, i32 poison }, i32 %trunc_result, 2, !dbg !15
  %2 = select i1 %success, { i1, { i32, ptr }, i32 } %1, { i1, { i32, ptr }, i32 } { i1 false, { i32, ptr } { i32 2, ptr @0 }, i32 poison }, !dbg !15
  store { i1, { i32, ptr }, i32 } %2, ptr %"4_0", align 8, !dbg !15
  %"4_02" = load { i1, { i32, ptr }, i32 }, ptr %"4_0", align 8
  store { i1, { i32, ptr }, i32 } %"4_02", ptr %"0", align 8
  %"03" = load { i1, { i32, ptr }, i32 }, ptr %"0", align 8
  ret { i1, { i32, ptr }, i32 } %"03"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !14}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, { i32, ptr }, i32 }", file: !2, size: 16, align: 8, elements: !8)
!8 = !{!9, !10, !12}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, ptr }", file: !2, size: 12, align: 8, elements: !11)
!11 = !{!12, !13}
!12 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!13 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!14 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!15 = !DILocation(line: 27062, column: 402, scope: !3)
